--- a/templates/account/mysetting.html
+++ b/templates/account/mysetting.html
@@ -25,4 +25,9 @@
       <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
   </div>
     </footer>
+    <style>
+      .gotomypage{
+          color: var(--icon);
+      }
+  </style>
 {% endblock %}
