--- a/templates/mysetting.html
+++ b/templates/mysetting.html
@@ -4,16 +4,18 @@
 {% block content %}
   <div class="setting-container">
     <div class="setting_container">
+      <div class="edit_container">
+        <a href="{% url 'demos:mypage' %}"><i class="ri-close-large-line"></i></a>
+      </div>
       <form action="" method="POST" class="setting_form">
         <h1>프로필 수정</h1>
           {% csrf_token %}
           {{ form.as_p }}
           <button type="submit" class="setting_btn">프로필 수정</button>
-            <hr>
         </form>
-
         <form id="withdrawForm" method="POST">
             {% csrf_token %}
+            <hr>
             <button type="button" onclick="withdrawUser(userId)" class="delete_btn">회원 탈퇴</button>
         </form>
     </div>
@@ -27,8 +29,15 @@
       <a href="{% url 'demos:home' %}"><i class="ri-home-4-line"></i></a>
       <a href="{% url 'demos:guidemap' %}"><i class="ri-route-line"></i></a>
       <a href="{% url 'demos:qna' %}"><i class="ri-question-answer-fill"></i></a>
-  </div>
-    </footer>
+    </div>
+    <style>
+      .gotomypage{
+          color: var(--icon);
+      }
+    </style>
+  </footer>
+  {% endblock%}
+  {% block scripts %}
       {{ user_id | json_script:'userId' }}
       <script>
       const userId = parseInt(JSON.parse(document.getElementById("userId").textContent));
