--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -696,5 +696,6 @@ h6 {
     cursor: pointer;
     margin-block: 2rem;
     padding: 10px;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    font-weight: 400;
 }
