--- a/static/css/style-lyj.css
+++ b/static/css/style-lyj.css
@@ -182,6 +182,9 @@ p{
     color: #555;
     margin-block: 1rem;
 }
+.setting_form label {
+    width: 9rem;
+}
 input, textarea {
     font-size: 1.3rem;
     touch-action: manipulation;
@@ -190,7 +193,7 @@ input, textarea {
     width: 16rem;
 }
 .setting_form input {
-    width: 14rem;
+    width: 13rem;
 }
 .login_elements input, .signup_form input, .setting_form input{
     padding: 0.5rem;
